@@ -31,10 +31,7 @@ import co.elastic.apm.agent.util.KeyListConcurrentHashMap;
 import org.HdrHistogram.WriterReaderPhaser;
 
 import javax.annotation.Nullable;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 
 /**
  * Data captured by an agent representing an event occurring in a monitored service
@@ -92,6 +89,8 @@ public class Transaction extends AbstractSpan<Transaction> {
 
     @Nullable
     private String frameworkName;
+
+    private boolean frameworkNameSetByUser;
 
     @Nullable
     private String frameworkVersion;
@@ -319,7 +318,19 @@ public class Transaction extends AbstractSpan<Transaction> {
     }
 
     public void setFrameworkName(@Nullable String frameworkName) {
+        if (frameworkNameSetByUser) {
+            return;
+        }
         this.frameworkName = frameworkName;
+    }
+
+    public void setUserFrameworkName(@Nullable String frameworkName) {
+        if (frameworkName != null && frameworkName.isEmpty()) {
+            this.frameworkName = null;
+        } else {
+            this.frameworkName = frameworkName;
+        }
+        this.frameworkNameSetByUser = true;
     }
 
     @Nullable
