@@ -20,6 +20,7 @@ package co.elastic.apm.agent.pluginapi;
 
 import co.elastic.apm.AbstractApiTest;
 import co.elastic.apm.agent.impl.TracerInternalApiUtils;
+import co.elastic.apm.api.AbstractSpanImplAccessor;
 import co.elastic.apm.api.ElasticApm;
 import co.elastic.apm.api.Outcome;
 import co.elastic.apm.api.Span;
@@ -27,7 +28,10 @@ import co.elastic.apm.api.Transaction;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
+import javax.annotation.Nullable;
 import java.security.SecureRandom;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -55,6 +59,44 @@ class TransactionInstrumentationTest extends AbstractApiTest {
     void testFrameworkName() {
         endTransaction();
         assertThat(reporter.getFirstTransaction().getFrameworkName()).isEqualTo("API");
+    }
+
+    @Test
+    void testSetUserFrameworkValidNameBeforeSetByInternalAPI() {
+        transaction.setFrameworkName("foo");
+        AbstractSpanImplAccessor.accessTransaction(transaction).setFrameworkName("bar");
+        endTransaction();
+        assertThat(reporter.getFirstTransaction().getFrameworkName()).isEqualTo("foo");
+    }
+
+    @Test
+    void testSetUserFrameworkValidNameAfterSetByInternalAPI() {
+        AbstractSpanImplAccessor.accessTransaction(transaction).setFrameworkName("bar");
+        transaction.setFrameworkName("foo");
+        endTransaction();
+        assertThat(reporter.getFirstTransaction().getFrameworkName()).isEqualTo("foo");
+    }
+
+    static String[] invalidFrameworkNames() {
+        return new String[]{null, ""};
+    }
+
+    @ParameterizedTest
+    @MethodSource("invalidFrameworkNames")
+    void testSetUserFrameworkInvalidNameBeforeSetByInternalAPI(@Nullable String frameworkName) {
+        transaction.setFrameworkName(frameworkName);
+        AbstractSpanImplAccessor.accessTransaction(transaction).setFrameworkName("bar");
+        endTransaction();
+        assertThat(reporter.getFirstTransaction().getFrameworkName()).isNull();
+    }
+
+    @ParameterizedTest
+    @MethodSource("invalidFrameworkNames")
+    void testSetUserFrameworkInvalidNameAfterSetByInternalAPI(@Nullable String frameworkName) {
+        AbstractSpanImplAccessor.accessTransaction(transaction).setFrameworkName("bar");
+        transaction.setFrameworkName(frameworkName);
+        endTransaction();
+        assertThat(reporter.getFirstTransaction().getFrameworkName()).isNull();
     }
 
     @Test
@@ -127,7 +169,6 @@ class TransactionInstrumentationTest extends AbstractApiTest {
     private void checkResult(String expected) {
         assertThat(reporter.getFirstTransaction().getResult()).isEqualTo(expected);
     }
-
 
 
     @Test
