@@ -58,6 +58,7 @@ Elasticsearch's REST client - {pull}1883[#1883]
 service map and downstream service in the dependencies table - {pull}1898[#1898]
 * Basic support for com.sun.net.httpserver.HttpServer - {pull}1854[#1854]
 * Update to async-profiler 1.8.6 {pull}1907[#1907]
+* Added support for setting the framework using the public api (#1908) - {pull}1909[#1909]
 
 [float]
 ===== Bug fixes
